--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,9 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        ndk {
+    abiFilters "arm64-v8a"
+  }
     }
     signingConfigs {
         debug {
@@ -105,6 +108,13 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+      ndkVersion "25.1.8937393"
+
+  externalNativeBuild {
+    cmake {
+      version "3.22.1"
+    }
+  }
 }
 
 dependencies {
