--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,8 +4,9 @@ buildscript {
         minSdkVersion = 24
         compileSdkVersion = 35
         targetSdkVersion = 35
-        ndkVersion = "27.1.12297006"
+        ndkVersion = "25.1.8937393"
         kotlinVersion = "2.1.20"
+        cmakeVersion = "3.22.1"
     }
     repositories {
         google()
