--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-native-toast-message": "^2.3.2",
