--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native/new-app-screen": "0.80.0",
@@ -18,6 +19,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-branch": "^6.7.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
