Updated the .env for the api keys

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-branch": "^6.7.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
